# EPIC

./: README.md
emulation/: .gitignore  CMakeLists.txt  README.md
emulation/benchmarks/src/: pcap_l2_switch.c  pure_pingpong.c
emulation/common/include/: epic_clean.h
emulation/common/scripts/: analyze_bcast_trace.py  analyze_reduce_trace.py  analyze_switch_bottleneck.py  build_clean.sh  derive_composite_primitives.py  summarize_bandwidth.py  summarize_utilization.py
emulation/common/src/: mode1_node.c  primitive_host.c  roce_packet.c  star4_switch.c
emulation/mpi_calibration/scripts/: summarize_mpi_bandwidth.py
emulation/mpi_calibration/src/: mpi_collectives.c
flow-sim/: README.md
flow-sim/config/: [Crux-stress-test].ini  [Crux].ini  [GPT3-13B].ini  [GPT3-175B].ini  [LLAMA-65B].ini  [LLAMA-7B].ini  [qwen].ini  model.json
flow-sim/scripts/: extract_jct.py
flow-sim/simulations/multi-tenant-newscaleup/: FlowController.cc  FlowMsg.h  flowsim.ned  omnetpp.ini
np/: README.md
pkt-sim/: .gitignore  README.md
pkt-sim/scratch/: EPIC2AllGather.cc  EPIC2AllReduce.cc  EPIC2AllReduce_PacketLoss.cc  EPIC2Broadcast.cc  EPIC2Reduce.cc  EPIC2ReduceScatter.cc  EPIC3AllGather.cc  EPIC3AllReduce.cc  EPIC3AllReduce_PacketLoss.cc  EPIC3Broadcast.cc  EPIC3Reduce.cc  EPIC3ReduceScatter.cc  RingAllGather.cc  RingAllReduce.cc  RingBroadcast.cc  RingReduce.cc  RingReduceScatter.cc  run_linknum_sweep.sh  run_log.sh  run_loss_sweep.sh  run_ring_sweep.sh
tofino/: README.md
verify/: .gitignore  README.md  setup.sh
verify/scripts/: post_process.py
(+41 files in other folders)
